RESOLVED FIXED304490
Assert that m_ptr is non-null in RefPtr's `operator->`
https://bugs.webkit.org/show_bug.cgi?id=304490
Summary Assert that m_ptr is non-null in RefPtr's `operator->`
Chris Dumez
Reported 2025-12-19 03:09:31 PST
Assert that m_ptr is non-null in RefPtr's `operator->`.
Attachments
Chris Dumez
Comment 1 2025-12-19 03:11:38 PST
EWS
Comment 2 2025-12-22 20:30:06 PST
Committed 304890@main (e018e14a52a3): <https://commits.webkit.org/304890@main> Reviewed commits have been landed. Closing PR #55700 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-22 20:31:16 PST
Note You need to log in before you can comment on or make changes to this bug.